--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
     "babel-plugin-polyfill-corejs3": "^0.5.2",
     "core-js": "^3.21.1",
     "react-dom": "^17.0.2"
+  },
+  "dependencies": {
+    "clsx": "^1.1.1"
   }
 }
